--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -50,6 +50,10 @@ a {
 .page {
   width: 90%;
   margin: auto;
+
+  @media only screen and (max-width: 800px) {
+    width: 94%;
+  }
 }
 
 .darkmode--activated {
